--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -18,6 +18,12 @@ jobs:
           distribution: "temurin"
           java-version: "21"
           cache: "gradle"
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
       - name: Cache Gradle dependencies
         uses: actions/cache@v4
         with:
@@ -27,14 +33,23 @@ jobs:
             ${{ runner.os }}-gradle-
       - name: Make gradlew executable
         run: chmod +x ./gradlew
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          JDBC_DATABASE_PASSWORD: ${{ secrets.JDBC_DATABASE_PASSWORD }}
+        run: ./gradlew build sonar --info
       - name: Build with Gradle
         run: |
           ./gradlew assemble
+        env:
+          JDBC_DATABASE_PASSWORD: ${{ secrets.JDBC_DATABASE_PASSWORD }}
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: java-app
           path: build/libs/*.jar
+
 
   test:
     name: Test
@@ -63,6 +78,9 @@ jobs:
           ./gradlew check --info --stacktrace
           ./gradlew test
           ./gradlew jacocoTestReport
+        env:
+          JDBC_DATABASE_PASSWORD: ${{ secrets.JDBC_DATABASE_PASSWORD }}
+
   publish:
     name: Publish Docker Image
     runs-on: ubuntu-latest
@@ -92,6 +110,7 @@ jobs:
           --build-arg JDBC_DATABASE_USERNAME='${{ secrets.JDBC_DATABASE_USERNAME }}' \
           -t ${{ secrets.REGISTRY_USER }}/${{ secrets.IMAGE_NAME }}:${{ secrets.IMAGE_TAG }} .
           docker push ${{ secrets.REGISTRY_USER }}/${{ secrets.IMAGE_NAME }}:${{ secrets.IMAGE_TAG }}
+
   deploy:
     name: Deploy to GCP
     runs-on: ubuntu-latest
