--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -68,6 +68,9 @@ jobs:
           ./gradlew jacocoTestReport
         env:
           JDBC_DATABASE_PASSWORD: ${{ secrets.JDBC_DATABASE_PASSWORD }}
+          JDBC_DATABASE_URL: ${{ secrets.JDBC_DATABASE_URL }}
+          JDBC_DATABASE_USERNAME: ${{ secrets.JDBC_DATABASE_USERNAME }}
+          PRODUCTION: ${{ secrets.PRODUCTION }}
 
   publish:
     name: Publish Docker Image
@@ -92,7 +95,7 @@ jobs:
         run: export DOCKER_BUILDKIT=1
       - name: Build Docker Image
         run: |
-          docker build --build-arg PRODUCTION='${{ secrets.PRODUCTION }}' \
+          docker build --build-arg PRODUCTION=${{ secrets.PRODUCTION }} \
           --build-arg JDBC_DATABASE_PASSWORD='${{ secrets.JDBC_DATABASE_PASSWORD }}' \
           --build-arg JDBC_DATABASE_URL='${{ secrets.JDBC_DATABASE_URL }}' \
           --build-arg JDBC_DATABASE_USERNAME='${{ secrets.JDBC_DATABASE_USERNAME }}' \
