--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-jwt.secret=${JWT_SECRET}
+#jwt.secret=${JWT_SECRET}
 spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
 spring.datasource.username=postgres.lqzwrlfijhrjkpqjivml
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
