--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-#jwt.secret=${JWT_SECRET}
+jwt.secret=${JWT_SECRET}
 spring.application.name=heymart-be-authenticate
 spring.profiles.active=${PRODUCTION:dev}
